--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,40 +1,39 @@
 # -------------------------------------------------------------------
 
 set(SRC_HEADER
+    # Fluid
+    Fluid/fluid.hpp
+    # Render
     Render/render.hpp
-    FluidSimulation/fluid_simulation.hpp
 )
 
 set(SRC_SOURCE
-    FluidSimulation/draw.cpp
-    FluidSimulation/fluid_simulation.cpp
-    FluidSimulation/logic.cpp
-    FluidSimulation/util.cpp
+    # Fluid
+    Fluid/draw.cpp
+    Fluid/fluid.cpp
+    Fluid/logic.cpp
+    Fluid/util.cpp
+    # Render
     Render/render.cpp
     Render/setup.cpp
+    # Main
     main.cpp 
 )
 
-find_package(PkgConfig REQUIRED)
 find_package(SDL2 REQUIRED)
-
-pkg_check_modules(JSONCPP jsoncpp)
-
-include_directories(
-    ${SDL2_INCLUDE_DIRS}
-    ${JSONCPP_INCLUDE_DIRS}
-)
-
-link_directories(${JSONCPP_LIBRARY_DIRS})
 
 add_executable(${PROJECT_NAME} 
     ${SRC_HEADER} 
     ${SRC_SOURCE}
 )
 
-target_link_libraries(${PROJECT_NAME}
-    PRIVATE ${JSONCPP_LIBRARIES}
-    PRIVATE ${SDL2_LIBRARIES}
+target_include_directories(${PROJECT_NAME} PRIVATE
+    ${SDL2_INCLUDE_DIRS}
+)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE
+    External_lib
+    ${SDL2_LIBRARIES}
 )
 
 # -------------------------------------------------------------------
