--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,9 @@
 # -------------------------------------------------------------------
 
+cmake_minimum_required(VERSION 3.4...3.25 FATAL_ERROR)
+
+# -------------------------------------------------------------------
+
 set(SRC_HEADER
     # ControlPanel
     ControlPanel/control_panel.hpp
@@ -33,6 +37,7 @@ add_executable(${PROJECT_NAME}
 )
 
 target_include_directories(${PROJECT_NAME} PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/
     ${SDL2_INCLUDE_DIRS}
 )
 
