Deixando o site e o programa responsivo Hehe

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,6 +22,7 @@ set(SRC_SOURCE
     Fluid/logic.cpp
     Fluid/util.cpp
     # Render
+    Render/draw.cpp
     Render/event.cpp
     Render/render.cpp
     Render/setup.cpp
