--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -62,4 +62,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ${{github.workspace}}/build_site/html
+          publish_dir: ${{github.workspace}}/build_site/src
