--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -24,16 +24,16 @@ set(EXTERNAL_SOURCES
     imgui/backends/imgui_impl_sdlrenderer2.cpp
 )
 
+foreach(SOURCE_FILE ${EXTERNAL_SOURCES})
+    set_source_files_properties(${SOURCE_FILE} PROPERTIES COMPILE_FLAGS "-w -Wno-nontrivial-memcall")
+endforeach()
+
 find_package(SDL2 REQUIRED)
 
 add_library(External_lib STATIC 
     ${EXTERNAL_HEADERS}
     ${EXTERNAL_SOURCES}
 )
-
-foreach(SOURCE_FILE ${EXTERNAL_SOURCES})
-    set_source_files_properties(${SOURCE_FILE} PROPERTIES COMPILE_FLAGS "-w -Wno-error -Wno-nontrivial-memcall")
-endforeach()
 
 target_include_directories(External_lib PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/imgui
