--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -58,8 +58,9 @@ jobs:
       - name: Build
         run: cmake --build ${{github.workspace}}/build_site --config ${{env.BUILD_TYPE}}
 
-      - name: Deploy Documentation
+      - name: Deploy Site
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ${{github.workspace}}/build_site/src
+          clean: true
